test/subjects/invalid/invalid_array_declare_ticks.php
<?php
	declare (ticks = array (6, "a")) { } // { Error: Cannot convert to ordinal value }
?>
